# api-108jobs

./: .editorconfig  .gitignore  .gitmodules  .rustfmt.toml  .woodpecker.yml  API_REFERENCE.md  API_TEST_RESULTS.md  BANK_TESTING_GUIDE.md  Cargo.toml  DEBUG_AUTH.md  MIGRATION_CLEANUP_SUMMARY.md  POSTMAN_COLLECTION.json  README.md  SIMPLE_TEST.md  TESTING_GUIDE.md  check_working_endpoints.sh  cliff.toml  diesel.toml  generate_jwt.py  optimistic_locking_examples.rs  optimistic_locking_usage.rs  postgres-tree  postman_api_requests.md  renovate.json  rustc-ice-2025-07-01T11_00_31-3193493.txt  test_api_workflow.sh  test_bank_flow.py  test_comment_rules.rs  test_complete_workflow.sh  test_implementation.md  test_proposal_fields.json  test_withdraw_endpoint.py  wallet_transaction_integration.rs
crates/admin/: Cargo.toml
crates/admin/src/: bank_account.rs  currency.rs  lib.rs  wallet.rs
crates/admin/src/site/: admin_allow_instance.rs  admin_block_instance.rs  leave_admin.rs  list_all_media.rs  mod.rs  mod_log.rs
crates/api/api_common/: Cargo.toml  README.md
crates/api/api_common/src/: account.rs  bank_account.rs  category.rs  comment.rs  community.rs  custom_emoji.rs  error.rs  federation.rs  inbox.rs  language.rs  lib.rs  media.rs  modlog.rs  oauth.rs  person.rs  plugin.rs  post.rs  proposal.rs  report.rs  search.rs  site.rs  tagline.rs  wallet.rs
crates/contract_tests/: Cargo.toml
crates/contract_tests/src/: lib.rs
crates/db/: Cargo.toml
crates/db/replaceable_schema/: triggers.sql  utils.sql
crates/db/src/: enums.rs  lib.rs  migrations.rs  newtypes.rs  schema.rs  sensitive.rs  test_data.rs  traits.rs  utils.rs
crates/db/src/impls/: actor_language.rs  bank.rs  billing.rs  captcha_answer.rs  category.rs  category_report.rs  chat_message.rs  chat_participant.rs  chat_room.rs  chat_unread.rs  coin.rs  comment.rs  comment_reply.rs  comment_report.rs  currency.rs  currency_rate_history.rs  custom_emoji.rs  delivery_details.rs  delivery_rider_rating.rs  email_verification.rs  images.rs  instance.rs  job_budget_plan.rs  keyword_block.rs  language.rs  last_read.rs  local_site.rs  local_site_rate_limit.rs  local_site_url_blocklist.rs  local_user.rs  login_token.rs  mod.rs  oauth_account.rs  oauth_provider.rs  password_reset_request.rs  pending_sender_ack.rs  person.rs  person_comment_mention.rs  person_post_mention.rs  person_proposal_mention.rs  (+23 more)
crates/db/src/source/: actor_language.rs  bank.rs  billing.rs  captcha_answer.rs  category.rs  category_report.rs  chat_message.rs  chat_participant.rs  chat_room.rs  chat_unread.rs  coin.rs  comment.rs  comment_reply.rs  comment_report.rs  currency.rs  currency_rate_history.rs  custom_emoji.rs  custom_emoji_keyword.rs  delivery_details.rs  delivery_rider_rating.rs  email_verification.rs  images.rs  instance.rs  job_budget_plan.rs  language.rs  last_read.rs  local_site.rs  local_site_rate_limit.rs  local_site_url_blocklist.rs  local_user.rs  login_token.rs  mod.rs  oauth_account.rs  oauth_provider.rs  password_reset_request.rs  pending_sender_ack.rs  person.rs  person_comment_mention.rs  person_post_mention.rs  person_proposal_mention.rs  (+23 more)
crates/db/src/utils/: queries.rs  uplete.rs
crates/db_schema_setup/: Cargo.toml
crates/db_schema_setup/replaceable_schema/: triggers.sql  utils.sql
crates/db_schema_setup/src/: diff_check.rs  lib.rs  main.rs
crates/db_views/bank_account/: Cargo.toml
crates/db_views/bank_account/src/: api.rs  impls.rs  lib.rs  validator.rs
crates/db_views/billing/: Cargo.toml
crates/db_views/billing/src/: api.rs  impls.rs  lib.rs  validator.rs
crates/db_views/category/: Cargo.toml
crates/db_views/category/src/: api.rs  impls.rs  lib.rs  validator.rs
crates/db_views/category_person_ban/: Cargo.toml
crates/db_views/category_person_ban/src/: impls.rs  lib.rs
crates/db_views/chat/: Cargo.toml
crates/db_views/chat/src/: api.rs  impls.rs  lib.rs
crates/db_views/chat_pending_ack/: Cargo.toml
crates/db_views/chat_pending_ack/src/: api.rs  impls.rs  lib.rs
crates/db_views/currency/: Cargo.toml
crates/db_views/currency/src/: api.rs  lib.rs  validator.rs
crates/db_views/custom_emoji/: Cargo.toml
crates/db_views/custom_emoji/src/: api.rs  impls.rs  lib.rs
crates/db_views/local_image/: Cargo.toml
crates/db_views/local_image/src/: api.rs  impls.rs  lib.rs
crates/db_views/person_content_combined/: Cargo.toml
crates/db_views/person_content_combined/src/: impls.rs  lib.rs
crates/db_views/person_liked_combined/: Cargo.toml
crates/db_views/person_liked_combined/src/: impls.rs  lib.rs
crates/db_views/post/: Cargo.toml
crates/db_views/post/src/: api.rs  impls.rs  lib.rs  logistics.rs  validator.rs
crates/db_views/rider/: Cargo.toml
crates/db_views/rider/src/: api.rs  impls.rs  lib.rs  ride_session_view.rs  validator.rs
crates/db_views/search_combined/: Cargo.toml
crates/db_views/search_combined/src/: impls.rs  lib.rs
crates/http/: Cargo.toml
crates/http/src/: lib.rs
crates/http/src/api/: mod.rs  search.rs
crates/http/src/crud/: mod.rs
crates/identity/: Cargo.toml
crates/identity/src/: change_password_after_reset.rs  generate_totp_secret.rs  get_captcha.rs  identity_card.rs  lib.rs  list_logins.rs  login.rs  resend_verification_email.rs  reset_password.rs  validate_auth.rs  verify_email.rs
crates/jobs/: Cargo.toml
crates/multilang/: Cargo.toml  build.rs
crates/multilang/src/: account.rs  admin.rs  lib.rs  loader.rs  namespace.rs  notifications.rs
crates/notifications/: Cargo.toml
crates/notifications/src/: list_inbox.rs  mark_reply_read.rs  unread_count.rs
crates/payments/: Cargo.toml
crates/payments/src/: bank_account.rs  lib.rs  wallet.rs  withdraw.rs
crates/proposals/: Cargo.toml
crates/workflow/: Cargo.toml
crates/workflow/src/: api.rs  impls.rs  lib.rs
crates/workflow_handlers/: Cargo.toml
crates/workflow_handlers/src/: lib.rs  workflow.rs
crates/ws/: Cargo.toml
crates/ws/src/: api.rs  bridge_message.rs  broker.rs  chat_room.rs  crypto.rs  handler.rs  impls.rs  lib.rs  message.rs  phoenix_session.rs  proxy.rs  server.rs  session.rs
(+1920 files in other folders)
