[workspace.package]
version = "1.0.0-alpha.5"
edition = "2021"
description = "A freelance job marketplace platform for Thailand"
license = "AGPL-3.0"
homepage = "https://108jobs.com"
documentation = "https://108jobs.com"
repository = "https://github.com/yuthstyle88/api-108jobs"
rust-version = "1.81"

[package]
name = "app_108jobs_api_server"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lib]
doctest = false

[lints]
workspace = true

# See https://github.com/johnthagen/min-sized-rust for additional optimizations
[profile.release]
lto = "fat"
opt-level = 3     # Optimize for speed, not size.
codegen-units = 1 # Reduce parallel code generation.
# panic = "abort"   # Commented out due to dependency conflicts
strip = true      # Strip symbols from binary (smaller binary).

# This profile significantly speeds up build time. If debug info is needed you can comment the line
# out temporarily, but make sure to leave this in the main branch.
[profile.dev]
opt-level = 0
debug = 2
lto = false
incremental = true

[features]
default = []

[workspace]
members = [
    "crates/api/api",
    "crates/api/api_crud",
    "crates/api/api_common",
    "crates/api/api_utils",
    "crates/utils",
    "crates/db_schema",
    "crates/db_schema_file",
    "crates/db_schema_setup",
    "crates/db_views/local_user",
    "crates/db_views/local_image",
    "crates/db_views/person",
    "crates/db_views/post",
    "crates/db_views/vote",
    "crates/db_views/reports",
    "crates/db_views/local_image",
    "crates/db_views/comment",
    "crates/db_views/category",
    "crates/db_views/category_person_ban",
    "crates/db_views/custom_emoji",
    "crates/db_views/inbox_combined",
    "crates/db_views/modlog_combined",
    "crates/db_views/person_content_combined",
    "crates/db_views/person_saved_combined",
    "crates/db_views/person_liked_combined",
    "crates/db_views/report_combined",
    "crates/db_views/search_combined",
    "crates/db_views/site",
    "crates/db_views/wallet",
    "crates/db_views/billing",
    "crates/db_views/bank_account",
    "crates/db_views/chat",
    "crates/db_views/chat_pending_ack",
    "crates/db_views/user_review",
    "crates/db_views/currency",
    "crates/routes",
    "crates/ws",
    "crates/email",
    "crates/workflow",
    "crates/db_views/rider",
    "crates/contract_tests",
]

[workspace.lints.clippy]
# --- enforced: will fail the build ---
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
dbg_macro = "deny"
implicit_clone = "deny"
inefficient_to_string = "deny"
manual_string_new = "deny"
needless_collect = "deny"
unused_self = "deny"
uninlined_format_args = "allow"
# --- allowed: pre-existing violations throughout the inherited codebase ---
# tracked for gradual cleanup; do not add new violations in new code
as_conversions = "allow"
bind_instead_of_map = "allow"
cast_lossless = "allow"
clone_on_copy = "allow"
cloned_instead_of_copied = "allow"
cloned_ref_to_slice_refs = "allow"
collapsible_match = "allow"
redundant_closure = "allow"
expect_used = "allow"
explicit_auto_deref = "allow"
explicit_into_iter_loop = "allow"
explicit_iter_loop = "allow"
get_first = "allow"
indexing_slicing = "allow"
items-after-statements = "allow"
large_enum_variant = "allow"
let_unit_value = "allow"
map_err_ignore = "allow"
match_like_matches_macro = "allow"
needless_borrow = "allow"
needless_borrows_for_generic_args = "allow"
needless_question_mark = "allow"
needless_update = "allow"
ptr_arg = "allow"
redundant_closure_for_method_calls = "allow"
redundant_pattern_matching = "allow"
redundant_static_lifetimes = "allow"
single_char_add_str = "allow"
too_many_arguments = "allow"
unimplemented = "allow"
unnecessary_map_or = "allow"
unnecessary_mut_passed = "allow"
unwrap_used = "allow"
unused_async = "allow"
useless_conversion = "allow"

[workspace.dependencies]
app_108jobs_api = { version = "=1.0.0-alpha.5", path = "./crates/api/api" }
app_108jobs_api_crud = { version = "=1.0.0-alpha.5", path = "./crates/api/api_crud" }
app_108jobs_utils = { version = "=1.0.0-alpha.5", path = "./crates/utils", default-features = false }
app_108jobs_db_schema = { version = "=1.0.0-alpha.5", path = "./crates/db_schema" }
app_108jobs_db_schema_file = { version = "=1.0.0-alpha.5", path = "./crates/db_schema_file" }
app_108jobs_db_schema_setup = { version = "=1.0.0-alpha.5", path = "./crates/db_schema_setup" }
app_108jobs_api_utils = { version = "=1.0.0-alpha.5", path = "./crates/api/api_utils" }
app_108jobs_api_common = { version = "=1.0.0-alpha.5", path = "./crates/api/api_common" }
app_108jobs_routes = { version = "=1.0.0-alpha.5", path = "./crates/routes" }
app_108jobs_email = { version = "=1.0.0-alpha.5", path = "./crates/email" }
app_108jobs_db_views_comment = { version = "=1.0.0-alpha.5", path = "./crates/db_views/comment" }
app_108jobs_db_views_category_person_ban = { version = "=1.0.0-alpha.5", path = "./crates/db_views/category_person_ban" }
app_108jobs_db_views_category = { version = "=1.0.0-alpha.5", path = "./crates/db_views/category" }
app_108jobs_db_views_custom_emoji = { version = "=1.0.0-alpha.5", path = "./crates/db_views/custom_emoji" }
app_108jobs_db_views_inbox_combined = { version = "=1.0.0-alpha.5", path = "./crates/db_views/inbox_combined" }
app_108jobs_db_views_local_image = { version = "=1.0.0-alpha.5", path = "./crates/db_views/local_image" }
app_108jobs_db_views_local_user = { version = "=1.0.0-alpha.5", path = "./crates/db_views/local_user" }
app_108jobs_db_views_modlog_combined = { version = "=1.0.0-alpha.5", path = "./crates/db_views/modlog_combined" }
app_108jobs_db_views_person = { version = "=1.0.0-alpha.5", path = "./crates/db_views/person" }
app_108jobs_db_views_person_content_combined = { version = "=1.0.0-alpha.5", path = "./crates/db_views/person_content_combined" }
app_108jobs_db_views_person_liked_combined = { version = "=1.0.0-alpha.5", path = "./crates/db_views/person_liked_combined" }
app_108jobs_db_views_person_saved_combined = { version = "=1.0.0-alpha.5", path = "./crates/db_views/person_saved_combined" }
app_108jobs_db_views_post = { version = "=1.0.0-alpha.5", path = "./crates/db_views/post" }
app_108jobs_db_views_registration_applications = { version = "=1.0.0-alpha.5", path = "./crates/db_views/registration_applications" }
app_108jobs_db_views_report_combined = { version = "=1.0.0-alpha.5", path = "./crates/db_views/report_combined" }
app_108jobs_db_views_reports = { version = "=1.0.0-alpha.5", path = "./crates/db_views/reports" }
app_108jobs_db_views_search_combined = { version = "=1.0.0-alpha.5", path = "./crates/db_views/search_combined" }
app_108jobs_db_views_site = { version = "=1.0.0-alpha.5", path = "./crates/db_views/site" }
app_108jobs_db_views_vote = { version = "=1.0.0-alpha.5", path = "./crates/db_views/vote" }
app_108jobs_db_views_wallet = { version = "=1.0.0-alpha.5", path = "./crates/db_views/wallet" }
app_108jobs_db_views_billing = { version = "=1.0.0-alpha.5", path = "./crates/db_views/billing" }
app_108jobs_db_views_bank_account = { version = "=1.0.0-alpha.5", path = "./crates/db_views/bank_account" }
app_108jobs_db_views_user_review = {version = "=1.0.0-alpha.5", path = "./crates/db_views/user_review"}
app_108jobs_ws = { version = "=1.0.0-alpha.5", path = "./crates/ws" }
app_108jobs_workflow = { version = "=1.0.0-alpha.5", path = "./crates/workflow" }
app_108jobs_db_views_chat = { version = "=1.0.0-alpha.5", path = "./crates/db_views/chat" }
app_108jobs_db_views_chat_pending_ack = { version = "=1.0.0-alpha.5", path = "./crates/db_views/chat_pending_ack" }
app_108jobs_db_views_rider = { version = "=1.0.0-alpha.5", path = "./crates/db_views/rider" }
app_108jobs_db_views_currency = { version = "=1.0.0-alpha.5", path = "./crates/db_views/currency" }
diesel = { version = "2.2.10", features = [
    "chrono",
    "postgres",
    "serde_json",
    "uuid",
    "64-column-tables",
] }
diesel_migrations = "2.2.0"
diesel-async = "0.5.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.12.0"
actix-web = { version = "4.11.0", default-features = false, features = [
    "compress-brotli",
    "compress-gzip",
    "compress-zstd",
    "cookies",
    "macros",
    "rustls-0_23",
] }
tracing = { version = "0.1.41", default-features = false }
tracing-actix-web = { version = "0.7.18", default-features = false }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
url = { version = "2.5.4", features = ["serde"] }
reqwest = { version = "0.12.19", default-features = false, features = [
    "blocking",
    "gzip",
    "json",
    "rustls-tls",
    "stream",
] }
reqwest-middleware = "0.4.2"
reqwest-tracing = "0.5.7"
clokwerk = "0.4.0"
doku = { version = "0.21.1", features = ["url-2"] }
bcrypt = "0.17.0"
chrono = { version = "0.4.41", features = [
    "now",
    "serde",
], default-features = false }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
base64 = "0.22.1"
uuid = { version = "1.17.0", features = ["serde"] }
captcha = "1.0.0"
anyhow = { version = "1.0.98", features = ["backtrace"] }
thiserror = "2.0.17"
diesel_ltree = "0.4.0"
serial_test = "3.2.0"
tokio = { version = "1.45.1", features = ["full"] }
regex = "1.11.1"
diesel-derive-newtype = "2.1.2"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
enum-map = { version = "2.7" }
strum = { version = "0.27.1", features = ["derive"] }
itertools = "0.14.0"
futures = "0.3.31"
futures-util = "0.3.31"
http = "1.2"
rosetta-i18n = "0.1.3"
ts-rs = { version = "11.0.1", features = [
    "chrono-impl",
    "no-serde-warnings",
    "url-impl",
] }
rustls = { version = "0.23.27", features = ["ring"] }
tokio-postgres = "0.7.13"
tokio-postgres-rustls = "0.13.0"
urlencoding = "2.1.3"
moka = { version = "0.12.10", features = ["future"] }
i-love-jesus = { version = "0.2.0" }
clap = { version = "4.5.39", features = ["derive", "env"] }
pretty_assertions = "1.4.1"
derive-new = "0.7.0"
tuplex = "0.1.2"
html2text = "0.15.1"
either = { version = "1.15.0", features = ["serde"] }
extism = { version = "1.12.0", default-features = false, features = [
    "http",
    "register-http",
    "register-filesystem",
] }
extism-convert = "1.12.0"
unified-diff = "0.2.1"
phoenix_channels_client = "0.1.2"
actix = "0.13.5"
rand = "0.8.5"
actix-broker = "0.4"
actix-web-actors = "4.1"
p256 = { version = "0.13.2", features = ["ecdh"] }
hex = "0.4.3"
validator = "0.20.0"
slug = "0.1.6"
redis = { version = "0.32.4", features = ["tokio-comp"] }
unic-langid = "0.9.6"
async-trait = "0.1.88"

[dependencies]
app_108jobs_api = { workspace = true }
app_108jobs_api_crud = { workspace = true }
app_108jobs_utils = { workspace = true }
app_108jobs_db_schema = { workspace = true }
app_108jobs_db_schema_setup = { workspace = true }
app_108jobs_api_utils = { workspace = true }
app_108jobs_routes = { workspace = true }
app_108jobs_ws = { workspace = true }
actix-web = { workspace = true }
tracing = { workspace = true }
tracing-actix-web = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-tracing = { workspace = true }
serde_json = { workspace = true }
rustls = { workspace = true }
tokio.workspace = true
clap = { workspace = true }
actix = { workspace = true }
mimalloc = "0.1.46"
