[package]
name = "lemmy_multilang"
publish = false
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "lemmy_multilang"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
lemmy_utils = { workspace = true, features = ["full"] }
lemmy_db_schema = { workspace = true, features = ["full"] }
lemmy_db_views_local_user = { workspace = true, features = ["full"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
html2text = { workspace = true }
lettre = { version = "0.11.17", default-features = false, features = [
    "builder",
    "smtp-transport",
    "tokio1-rustls-tls",
    "pool",
] }
rand = "0.9.1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = "1.0.98"
once_cell = "1.21.3"
strfmt = "0.2.4"
maplit = "1.0.2"

[dev-dependencies]
