[package]
name = "app_108jobs_notifications"
publish = false
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "app_108jobs_notifications"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[features]
default = []
full = []

[dependencies]
app_108jobs_core = { workspace = true }
app_108jobs_db = { workspace = true, features = ["full"] }
app_108jobs_api_utils = { workspace = true }
app_108jobs_db_views_local_user = { workspace = true, features = ["full"] }
app_108jobs_db_views_inbox_combined = { workspace = true, features = ["full"] }
app_108jobs_db_views_site = { workspace = true, features = ["full"] }
actix-web = { workspace = true }
