[package]
name = "app_108jobs_payments"
version = "1.0.0-alpha.5"
edition = "2021"
publish = false

[lib]
name = "app_108jobs_payments"

[lints]
workspace = true

[dependencies]
app_108jobs_api_common = { workspace = true }
app_108jobs_api_utils = { workspace = true }
app_108jobs_core = { workspace = true }
app_108jobs_db = { workspace = true, features = ["full"] }
app_108jobs_db_views_bank_account = { workspace = true, features = ["full"] }
app_108jobs_db_views_local_user = { workspace = true, features = ["full"] }
app_108jobs_db_views_site = { workspace = true, features = ["full"] }
app_108jobs_db_views_wallet = { workspace = true, features = ["full"] }
actix-web = { workspace = true }
chrono = { workspace = true }
