[package]
name = "app_108jobs_proposals"
publish = false
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "app_108jobs_proposals"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[features]
default = []
full = []

[dependencies]
app_108jobs_db_views_comment = { workspace = true, features = ["full"] }
app_108jobs_db_views_post = { workspace = true, features = ["full"] }
app_108jobs_db_views_local_user = { workspace = true, features = ["full"] }
app_108jobs_db_views_vote = { workspace = true, features = ["full"] }
app_108jobs_core = { workspace = true }
app_108jobs_db = { workspace = true, features = ["full"] }
app_108jobs_api_utils = { workspace = true }
actix-web = { workspace = true }
chrono = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
