[package]
name = "app_108jobs_workflow"
version = "1.0.0-alpha.5"
edition = "2021"
authors = ["app_108jobs Authors"]
description = "Workflow services for billing and job lifecycle"
license = "AGPL-3.0"
publish = false

[features]
ts-rs = [
  "dep:ts-rs",
  "app_108jobs_db_schema/ts-rs",
  "app_108jobs_db_schema_file/ts-rs",
]
[dependencies]
app_108jobs_utils = { workspace = true }
app_108jobs_db_schema = { workspace = true }
app_108jobs_db_schema_file = { workspace = true }
app_108jobs_db_views_wallet = { workspace = true }
app_108jobs_db_views_billing = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
uuid =  { workspace = true }
serde_json  =  { workspace = true }
ts-rs = { workspace = true, optional = true }
tracing = "0.1.41"