[package]
name = "lemmy_ws"
publish = false
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
lemmy_utils = { workspace = true, features = ["full"] }
lemmy_db_schema = { workspace = true, features = ["full"] }
actix-web = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
actix = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
actix-broker = { workspace = true }
actix-web-actors = { workspace = true }
rand = { workspace = true }
phoenix_channels_client = { git = "https://github.com/liveview-native/phoenix-channels-client", branch = "main" }
hex = "0.4"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
futures-util = "0.3.31"
log = "0.4.27"
