[package]
name = "app_108jobs_api_common"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "app_108jobs_api_common"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[features]
full = ["ts-rs"]
ts-rs = [
  "app_108jobs_utils/ts-rs",
  "app_108jobs_db_schema/ts-rs",
  "app_108jobs_db_schema_file/ts-rs",
  "app_108jobs_db_views_comment/ts-rs",
  "app_108jobs_db_views_category/ts-rs",
  "app_108jobs_db_views_custom_emoji/ts-rs",
  "app_108jobs_db_views_inbox_combined/ts-rs",
  "app_108jobs_db_views_local_image/ts-rs",
  "app_108jobs_db_views_local_user/ts-rs",
  "app_108jobs_db_views_modlog_combined/ts-rs",
  "app_108jobs_db_views_person/ts-rs",
  "app_108jobs_db_views_person_content_combined/ts-rs",
  "app_108jobs_db_views_person_liked_combined/ts-rs",
  "app_108jobs_db_views_person_saved_combined/ts-rs",
  "app_108jobs_db_views_post/ts-rs",
  "app_108jobs_db_views_registration_applications/ts-rs",
  "app_108jobs_db_views_report_combined/ts-rs",
  "app_108jobs_db_views_reports/ts-rs",
  "app_108jobs_db_views_search_combined/ts-rs",
  "app_108jobs_db_views_site/ts-rs",
  "app_108jobs_db_views_vote/ts-rs",
]

[dependencies]
app_108jobs_utils.workspace = true
app_108jobs_db_schema.workspace = true
app_108jobs_db_schema_file.workspace = true
app_108jobs_db_views_comment.workspace = true
app_108jobs_db_views_category.workspace = true
app_108jobs_db_views_custom_emoji.workspace = true
app_108jobs_db_views_inbox_combined.workspace = true
app_108jobs_db_views_local_image.workspace = true
app_108jobs_db_views_local_user.workspace = true
app_108jobs_db_views_modlog_combined.workspace = true
app_108jobs_db_views_person.workspace = true
app_108jobs_db_views_person_content_combined.workspace = true
app_108jobs_db_views_person_liked_combined.workspace = true
app_108jobs_db_views_person_saved_combined.workspace = true
app_108jobs_db_views_post.workspace = true
app_108jobs_db_views_registration_applications.workspace = true
app_108jobs_db_views_report_combined.workspace = true
app_108jobs_db_views_reports.workspace = true
app_108jobs_db_views_search_combined.workspace = true
app_108jobs_db_views_site.workspace = true
app_108jobs_db_views_vote.workspace = true
app_108jobs_db_views_bank_account.workspace = true
app_108jobs_db_views_wallet.workspace = true
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.12.0"
