[package]
name = "app_108jobs_db_views_bank_account"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
full = [
    "app_108jobs_db/full",
    "diesel",
    "diesel-async",
    "i-love-jesus",
]
ts-rs = [
    "dep:ts-rs",
    "app_108jobs_db/ts-rs",
    "app_108jobs_db/ts-rs",
]

[dependencies]
app_108jobs_db = { workspace = true }
app_108jobs_core = { workspace = true }
diesel = { workspace = true, optional = true }
diesel-async = { workspace = true, optional = true }
serde = { workspace = true }
serde_with = { workspace = true }
ts-rs = { workspace = true, optional = true }
i-love-jesus = { workspace = true, optional = true }