[package]
name = "app_108jobs_db_views_billing"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]
app_108jobs_db_schema = { workspace = true }
app_108jobs_db_schema_file = { workspace = true }
app_108jobs_db_views_wallet = { workspace = true }
app_108jobs_utils = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
ts-rs = { workspace = true, optional = true }

[features]
ts-rs = [
    "dep:ts-rs",
    "app_108jobs_db_schema/ts-rs",
    "app_108jobs_db_schema_file/ts-rs",
]

[dev-dependencies]
tokio = { workspace = true }